tests/baselines/reference/parserTypeQuery2.errors.txt
tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery2.ts(1,15): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery2.ts (1 errors) ====
    var v: typeof A;
                  ~
!!! error TS2304: Cannot find name 'A'.